--- a/packages/mcp_servers/safepay_wallet/pyproject.toml
+++ b/packages/mcp_servers/safepay_wallet/pyproject.toml
@@ -5,10 +5,11 @@ build-backend = "hatchling.build"
 [project]
 name = "safepay-wallet-mcp"
 version = "0.1.0"
-description = "SafePay Wallet MCP Server for payment methods functionality"
+description = "SafePay Wallet MCP server for payment methods functionality"
 authors = [
     { name = "SafePay Wallet Team" }
 ]
+requires-python = ">=3.9"
 dependencies = [
     "fastapi>=0.109.0",
     "uvicorn>=0.27.0",
@@ -18,7 +19,6 @@ dependencies = [
     "httpx>=0.26.0",
     "mcp>=0.1.0"
 ]
-requires-python = ">=3.9"
 
 [project.scripts]
 safepay-wallet-mcp = "safepay_wallet.server:main"
@@ -34,4 +34,7 @@ ignore = []
 [tool.ruff.format]
 quote-style = "double"
 indent-style = "space"
-line-ending = "auto" 
+line-ending = "auto"
+
+[tool.uv]
+python = "3.9" 
