--- a/packages/optimization_agent/pyproject.toml
+++ b/packages/optimization_agent/pyproject.toml
@@ -1,17 +1,19 @@
-[tool.poetry]
+[project]
 name = "optimization-agent"
 version = "0.1.0"
-description = "Smart SDK agent for travel optimization"
-authors = ["Your Name <your.email@example.com>"]
-
-[tool.poetry.dependencies]
-python = "^3.11"
-# smart-sdk = "^1.0.0"  # Note: This is a placeholder version, commented out for local development
-requests = "^2.31.0"
-httpx = "^0.27.0"
-pydantic = "^2.6.0"
-asyncio = "^3.4.3"
+description = "Travel optimization agent that connects to multiple MCP servers"
+requires-python = ">=3.9"
+dependencies = [
+    "smart-sdk>=0.1.0",
+    "requests>=2.31.0",
+    "loguru>=0.7.2",
+    "python-dotenv>=1.0.0",
+    "uv>=0.1.0"
+]
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api" 
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.uv]
+python = "3.9" 
