--- a/packages/optimization_agent/pyproject.toml
+++ b/packages/optimization_agent/pyproject.toml
@@ -15,5 +15,5 @@ dependencies = [
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
-[tool.uv]
-python = "3.9" 
+[tool.uv.python]
+version = "3.9" 
