--- a/packages/shared/pyproject.toml
+++ b/packages/shared/pyproject.toml
@@ -1,13 +1,17 @@
-[tool.poetry]
+[project]
 name = "shared"
 version = "0.1.0"
-description = "Shared types and utilities for travel optimization"
-authors = ["Your Name <your.email@example.com>"]
-
-[tool.poetry.dependencies]
-python = "^3.11"
-pydantic = "^2.6.0"
+description = "Shared models and utilities for the travel optimization application"
+requires-python = ">=3.12"
+dependencies = [
+    "pydantic>=2.6.0",
+    "python-dotenv>=1.0.0",
+    "loguru>=0.7.2"
+]
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api" 
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.uv]
+python = "3.12" 
