--- a/packages/optimization_agent/pyproject.toml
+++ b/packages/optimization_agent/pyproject.toml
@@ -2,18 +2,20 @@
 name = "optimization-agent"
 version = "0.1.0"
 description = "Travel optimization agent that connects to multiple MCP servers"
+readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "smart-sdk>=0.1.0",
     "requests>=2.31.0",
     "loguru>=0.7.2",
     "python-dotenv>=1.0.0",
-    "uv>=0.1.0"
+    "uv>=0.1.0",
+    "shared @ file:///packages/shared"
 ]
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
-[tool.uv.python]
-version = "3.12" 
+[tool.uv]
+python = "3.12" 
