--- a/packages/shared/pyproject.toml
+++ b/packages/shared/pyproject.toml
@@ -2,6 +2,7 @@
 name = "shared"
 version = "0.1.0"
 description = "Shared models and utilities for the travel optimization application"
+readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "pydantic>=2.6.0",
