--- a/packages/mcp_servers/safepay_wallet/pyproject.toml
+++ b/packages/mcp_servers/safepay_wallet/pyproject.toml
@@ -16,7 +16,7 @@ dependencies = [
     "loguru>=0.7.2",
     "httpx>=0.26.0",
     "mcp>=0.1.0",
-    "shared @ file:///packages/shared"
+    "shared @ file:../../shared"
 ]
 
 [project.scripts]
