--- a/packages/mcp_servers/chase_travel/pyproject.toml
+++ b/packages/mcp_servers/chase_travel/pyproject.toml
@@ -1,7 +1,3 @@
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
-
 [project]
 name = "chase-travel-mcp"
 version = "0.1.0"
@@ -33,4 +29,7 @@ ignore = []
 [tool.ruff.format]
 quote-style = "double"
 indent-style = "space"
-line-ending = "auto" 
+line-ending = "auto"
+
+[tool.hatch.metadata]
+allow-direct-references = true 
