--- a/packages/optimization_agent/pyproject.toml
+++ b/packages/optimization_agent/pyproject.toml
@@ -13,6 +13,5 @@ dependencies = [
     "shared @ file:../shared"
 ]
 
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build" 
+[tool.hatch.metadata]
+allow-direct-references = true 
