--- a/packages/mcp_servers/chase_travel/pyproject.toml
+++ b/packages/mcp_servers/chase_travel/pyproject.toml
@@ -12,7 +12,7 @@ dependencies = [
     "loguru>=0.7.2",
     "httpx>=0.26.0",
     "mcp>=0.1.0",
-    "shared @ file:../../shared"
+    "shared"
 ]
 
 [project.scripts]
@@ -29,7 +29,4 @@ ignore = []
 [tool.ruff.format]
 quote-style = "double"
 indent-style = "space"
-line-ending = "auto"
-
-[tool.hatch.metadata]
-allow-direct-references = true 
+line-ending = "auto" 
