--- a/packages/optimization_agent/pyproject.toml
+++ b/packages/optimization_agent/pyproject.toml
@@ -10,7 +10,7 @@ dependencies = [
     "loguru>=0.7.2",
     "python-dotenv>=1.0.0",
     "uv>=0.1.0",
-    "shared @ file:../shared"
+    "shared"
 ]
 
 [tool.hatch.metadata]
